--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<a type="test" target="test" rel="test" referrerpolicy="test" ping="test" href="path/to/resource" download="test" hreflang="test" media="test"><bold>h</bold>ello world</a>
+<html>
+  <a type="test" target="test" rel="test" referrerpolicy="test" ping="test" href="path/to/resource" download="test" hreflang="test" media="test"><bold>h</bold>ello world</a>
+</html>
