--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html xmlns="xml namespace">
+<html xmlns="xml namespace" lang="en-us" accesskey="key">
   <!-- this is a comment -->
   <a type="test" target="test" rel="test" referrerpolicy="test" ping="test" href="path/to/resource" download="test" hreflang="test" media="test"><bold>h</bold>ello world</a>
+  <p autocapitalize>hello world</p>
 </html>
