added support for div tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html xmlns="xml namespace" lang="en-us" accesskey="key">
   <!-- this is a comment -->
   <body>
-    <a type="test" target="test" rel="test" referrerpolicy="test" ping="test" href="path/to/resource" download="test" hreflang="test" media="test"><bold>h</bold>ello world</a>
+    <div>
+      <a type="test" target="test" rel="test" referrerpolicy="test" ping="test" href="path/to/resource" download="test" hreflang="test" media="test"><bold>h</bold>ello world</a>
+    </div>
   </body>
   <p autocapitalize>hello world</p>
 </html>
